Create production environment